--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
 		<title>tvb2</title>
 		<style>
-		
 html, body, #canvas {
 	margin: 0;
 	padding: 0;
@@ -77,9 +76,9 @@ body {
 	z-index: 1;
 }
 		</style>
-		<link id="-gd-engine-icon" rel="icon" type="image/png" href="tvb_alpha_0.7.icon.png" />
-<link rel="apple-touch-icon" href="tvb_alpha_0.7.apple-touch-icon.png"/>
-<link rel="manifest" href="tvb_alpha_0.7.manifest.json">
+		<link id="-gd-engine-icon" rel="icon" type="image/png" href="index.icon.png" />
+<link rel="apple-touch-icon" href="index.apple-touch-icon.png"/>
+<link rel="manifest" href="index.manifest.json">
 
 	</head>
 	<body>
@@ -92,14 +91,14 @@ body {
 		</noscript>
 
 		<div id="status">
-			<img id="status-splash" src="tvb_alpha_0.7.png" alt="">
+			<img id="status-splash" src="index.png" alt="">
 			<progress id="status-progress"></progress>
 			<div id="status-notice"></div>
 		</div>
 
-		<script src="tvb_alpha_0.7.js"></script>
+		<script src="index.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"tvb_alpha_0.7","experimentalVK":false,"fileSizes":{"tvb_alpha_0.7.pck":380784,"tvb_alpha_0.7.wasm":43016933},"focusCanvas":true,"gdextensionLibs":[],"serviceWorker":"tvb_alpha_0.7.service.worker.js"};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":380528,"index.wasm":43016933},"focusCanvas":true,"gdextensionLibs":[],"serviceWorker":"index.service.worker.js"};
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
